--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,5 +11,6 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "jsx": "react-jsx"
-    }
+    },
+    "exclude": ["**/node_modules", "**/dist", "**/__tests__/**"]
 }
