--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
         "@commitlint/config-conventional": "19.8.0",
         "@commitlint/types": "19.8.0",
         "@eslint/js": "9.23.0",
-        "@tailwindcss/vite": "4.1.4",
+        "@nild/components": "workspace:*",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@types/react": "18.2.0",
         "@types/react-dom": "18.2.0",
+        "@vitejs/plugin-react": "4.4.1",
+        "autoprefixer": "10.4.21",
+        "clsx": "2.1.1",
         "eslint": "9.23.0",
         "eslint-config-prettier": "10.1.0",
         "eslint-plugin-import": "2.31.0",
@@ -43,14 +46,19 @@
         "globals": "15.15.0",
         "husky": "9.1.7",
         "jsdom": "26.1.0",
+        "less": "4.3.0",
         "lint-staged": "15.4.3",
+        "markdown-it-container": "4.0.0",
+        "postcss": "8.5.3",
         "prettier": "3.5.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "tailwindcss": "4.1.4",
+        "react-live": "4.1.8",
+        "tailwindcss": "3.4.17",
         "typescript": "5.8.2",
         "typescript-eslint": "8.26.1",
         "vite": "5.4.14",
+        "vite-plugin-dts": "4.5.3",
         "vite-plugin-svgr": "4.3.0",
         "vitepress": "1.6.3",
         "vitest": "3.1.2"
