--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,6 +20,9 @@
         "test": "vitest run --environment jsdom --globals",
         "test:coverage": "vitest run --environment jsdom --globals --coverage"
     },
+    "dependencies": {
+        "@icon-park/react": "1.4.2"
+    },
     "peerDependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
