--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
+        "components:build": "pnpm --filter @nild/components build",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
     },
