--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
+        "docs:api": "node scripts/generate-api-docs.js",
         "components:build": "pnpm --filter @nild/components build",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
@@ -57,6 +58,7 @@
         "react-dom": "18.2.0",
         "react-live": "4.1.8",
         "tailwindcss": "3.4.17",
+        "typedoc": "0.28.4",
         "typescript": "5.8.2",
         "typescript-eslint": "8.26.1",
         "vite": "5.4.14",
