chore: replace less with postcss-nested

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
         "docs:api": "node scripts/generate-api-docs.js",
+        "components:dev": "pnpm --filter @nild/components dev",
         "components:build": "pnpm --filter @nild/components build",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
@@ -49,10 +50,11 @@
         "globals": "15.15.0",
         "husky": "9.1.7",
         "jsdom": "26.1.0",
-        "less": "4.3.0",
         "lint-staged": "15.4.3",
         "markdown-it-container": "4.0.0",
         "postcss": "8.5.3",
+        "postcss-import": "16.1.0",
+        "postcss-nested": "7.0.2",
         "prettier": "3.5.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
