feat: add some simple hooks

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "docs:api": "node scripts/generate-api-docs.js",
         "components:dev": "pnpm --filter @nild/components dev",
         "components:build": "pnpm --filter @nild/components build",
+        "components:test": "pnpm --filter @nild/components test",
+        "hooks:dev": "pnpm --filter @nild/hooks dev",
+        "hooks:build": "pnpm --filter @nild/hooks build",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
     },
@@ -36,6 +39,7 @@
         "@nild/components": "workspace:*",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
+        "@types/lodash-es": "4.17.12",
         "@types/react": "18.2.0",
         "@types/react-dom": "18.2.0",
         "@vitejs/plugin-react": "4.4.1",
@@ -51,6 +55,7 @@
         "husky": "9.1.7",
         "jsdom": "26.1.0",
         "lint-staged": "15.4.3",
+        "lodash-es": "4.17.21",
         "markdown-it-container": "4.0.0",
         "postcss": "8.5.3",
         "postcss-import": "16.1.0",
