--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -7,6 +7,18 @@
         ".": {
             "types": "./dist/index.d.ts",
             "import": "./dist/index.mjs"
+        },
+        "./useControllable": {
+            "types": "./dist/useControllable.d.ts",
+            "import": "./dist/useControllable.mjs"
+        },
+        "./useLocalStorage": {
+            "types": "./dist/useLocalStorage.d.ts",
+            "import": "./dist/useLocalStorage.mjs"
+        },
+        "./useUpdate": {
+            "types": "./dist/useUpdate.d.ts",
+            "import": "./dist/useUpdate.mjs"
         }
     },
     "files": [
