--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "eslint-plugin-react": "7.37.4",
         "eslint-plugin-react-hooks": "5.2.0",
         "globals": "15.15.0",
+        "gray-matter": "4.0.3",
         "husky": "9.1.7",
         "jsdom": "26.1.0",
         "lint-staged": "15.4.3",
