--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,12 +25,10 @@
         "test": "vitest run --environment jsdom --globals",
         "test:coverage": "vitest run --environment jsdom --globals --coverage"
     },
-    "dependencies": {
-        "@icon-park/react": "1.4.2"
-    },
     "peerDependencies": {
         "react": ">=18.2.0",
         "react-dom": ">=18.2.0",
-        "clsx": ">=2.1.1"
+        "clsx": ">=2.1.1",
+        "@icon-park/react": ">=1.4.2"
     }
 }
