--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
         "@eslint/js": "9.23.0",
         "@icon-park/react": "1.4.2",
         "@nild/components": "workspace:*",
+        "@tailwindcss/vite": "4.1.7",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@types/lodash-es": "4.17.12",
         "@types/react": "18.2.0",
         "@types/react-dom": "18.2.0",
         "@vitejs/plugin-react": "4.4.1",
-        "autoprefixer": "10.4.21",
         "clsx": "2.1.1",
         "eslint": "9.23.0",
         "eslint-config-prettier": "10.1.0",
@@ -59,13 +59,13 @@
         "lodash-es": "4.17.21",
         "markdown-it-container": "4.0.0",
         "postcss": "8.5.3",
-        "postcss-import": "16.1.0",
         "postcss-nested": "7.0.2",
         "prettier": "3.5.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-live": "4.1.8",
-        "tailwindcss": "3.4.17",
+        "tailwind-merge": "3.3.0",
+        "tailwindcss": "4.1.7",
         "typedoc": "0.28.4",
         "typescript": "5.8.2",
         "typescript-eslint": "8.26.1",
