--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,9 +8,7 @@
             "types": "./dist/index.d.ts",
             "import": "./dist/index.mjs"
         },
-        "./style": {
-            "import": "./dist/style.css"
-        },
+        "./tailwindcss": "./dist/tailwind.css",
         "./button": {
             "types": "./dist/button/index.d.ts",
             "import": "./dist/button/index.mjs"
@@ -32,6 +30,7 @@
         "react": ">=18.2.0",
         "react-dom": ">=18.2.0",
         "clsx": ">=2.1.1",
-        "lodash-es": ">=4.17.21"
+        "lodash-es": ">=4.17.21",
+        "tailwind-merge": ">=3.3.0"
     }
 }
