fix(hooks): return type of useControllable

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@nild/hooks",
     "private": false,
+    "version": "0.0.1",
     "type": "module",
     "module": "./dist/index.mjs",
     "exports": {
