--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@eslint/js": "9.23.0",
         "@icon-park/react": "1.4.2",
         "@nild/components": "workspace:*",
+        "@nild/hooks": "workspace:*",
         "@tailwindcss/vite": "4.1.7",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
