refactor: add @nild/shared 2 sharing utils 4 other packages

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
-        "docs:api": "node scripts/generate-api-docs.js",
+        "shared:build": "pnpm --filter @nild/shared build",
+        "shared:dev": "pnpm --filter @nild/shared dev",
         "components:dev": "pnpm --filter @nild/components dev",
         "components:build": "pnpm --filter @nild/components build",
         "components:test": "pnpm --filter @nild/components test",
@@ -39,6 +40,7 @@
         "@icon-park/react": "1.4.2",
         "@nild/components": "workspace:*",
         "@nild/hooks": "workspace:*",
+        "@nild/shared": "workspace:*",
         "@tailwindcss/vite": "4.1.7",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
