--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -28,11 +28,11 @@
         "@icon-park/react": "1.4.2"
     },
     "peerDependencies": {
+        "@nild/shared": "workspace:*",
         "@nild/hooks": "workspace:*",
         "react": ">=18.2.0",
         "react-dom": ">=18.2.0",
         "clsx": ">=2.1.1",
-        "lodash-es": ">=4.17.21",
         "tailwind-merge": ">=3.3.0"
     }
 }
