--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -30,8 +30,7 @@
         "dev": "vite build --mode DEV --watch"
     },
     "peerDependencies": {
-        "@types/lodash-es": ">=4.17.12",
-        "react": ">=18.2.0",
-        "lodash-es": ">=4.17.21"
+        "@nild/shared": "workspace:*",
+        "react": ">=18.2.0"
     }
 }
