--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,11 @@ on:
     paths:
       - "docs/**"
       - "packages/**"
+      - "scripts/**"
       - "package.json"
+      - "pnpm-lock.yaml"
+      - "tsconfig.base.json"
+      - "tsconfig.json"
 
 permissions:
   contents: read
