--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,9 @@
     "type": "module",
     "module": "./dist/index.mjs",
     "exports": {
-        "./types": "./dist/types/index.d.ts",
+        "./interfaces": {
+            "types": "./dist/interfaces/index.d.ts"
+        },
         "./utils": {
             "types": "./dist/utils/index.d.ts",
             "import": "./dist/utils/index.mjs"
@@ -18,9 +20,13 @@
         "build": "vite build --mode PROD",
         "dev": "vite build --mode DEV --watch"
     },
+    "dependencies": {
+        "lodash-es": "4.17.21",
+        "clsx": "2.1.1",
+        "tailwind-merge": "3.3.0"
+    },
     "peerDependencies": {
-        "@types/lodash-es": ">=4.17.12",
         "react": ">=18.2.0",
-        "lodash-es": ">=4.17.21"
+        "tailwindcss": ">=4.0.0"
     }
 }
