build: change output extension from .mjs 2 .js

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,14 +3,14 @@
     "private": false,
     "version": "0.0.1",
     "type": "module",
-    "module": "./dist/index.mjs",
+    "module": "./dist/index.js",
     "exports": {
         "./interfaces": {
             "types": "./dist/interfaces/index.d.ts"
         },
         "./utils": {
             "types": "./dist/utils/index.d.ts",
-            "import": "./dist/utils/index.mjs"
+            "import": "./dist/utils/index.js"
         }
     },
     "files": [
