--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -3,11 +3,11 @@
     "private": false,
     "version": "0.0.1",
     "type": "module",
-    "module": "./dist/index.mjs",
+    "module": "./dist/index.js",
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs"
+            "import": "./dist/index.js"
         }
     },
     "files": [
