--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/react-dom": "18.2.0",
         "@vitejs/plugin-react": "4.4.1",
         "clsx": "2.1.1",
+        "esbuild": "0.25.5",
         "eslint": "9.23.0",
         "eslint-config-prettier": "10.1.0",
         "eslint-plugin-import": "2.31.0",
