chore: supplement the release info and files 4 sub packages

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -10,8 +10,19 @@
             "import": "./dist/index.js"
         }
     },
+    "homepage": "https://nil-design.github.io/nil-design/zh-CN/hooks",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nil-design/nil-design.git"
+    },
+    "bugs": {
+        "url": "https://github.com/nil-design/nil-design/issues"
+    },
     "files": [
-        "dist"
+        "dist",
+        "package.json",
+        "LICENSE",
+        "NOTICE"
     ],
     "scripts": {
         "build": "vite build --mode PROD",
