--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,8 +13,18 @@
             "import": "./dist/utils/index.js"
         }
     },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nil-design/nil-design.git"
+    },
+    "bugs": {
+        "url": "https://github.com/nil-design/nil-design/issues"
+    },
     "files": [
-        "dist"
+        "dist",
+        "package.json",
+        "LICENSE",
+        "NOTICE"
     ],
     "scripts": {
         "build": "vite build --mode PROD",
