--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -23,6 +23,10 @@ jobs:
         run: pnpm install
       - name: Build packages
         run: pnpm build
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Create release PR & Publish
         uses: changesets/action@v1
         with:
