--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Create release PR & Publish
         uses: changesets/action@v1
         with:
-          publish: pnpm changeset publish --tag alpha
+          publish: pnpm ci:publish
           version: pnpm changeset version
           commit: "ci: release new versions"
           title: "ci: release new versions"
