--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
     types:
       - closed
     branches:
-      - main
+      - refs/heads/main
     paths:
       - "docs/**"
       - "packages/**"
