--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "lint-staged": "15.4.3",
         "lodash-es": "4.17.21",
         "markdown-it-container": "4.0.0",
+        "mermaid": "11.6.0",
         "postcss": "8.5.3",
         "postcss-nested": "7.0.2",
         "prettier": "3.5.3",
