--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-live": "4.1.8",
+        "stylelint": "16.19.1",
+        "stylelint-config-standard": "38.0.0",
         "tailwind-merge": "3.3.0",
         "tailwindcss": "4.1.7",
         "typedoc": "0.28.4",
