ci: restrict branches

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,9 @@ on:
     types:
       - closed
     branches:
-      - refs/heads/main
+      - main
+    branches-ignore:
+      - "changeset-release/main"
     paths:
       - "docs/**"
       - "packages/**"
