--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -30,10 +30,12 @@
         "build": "vite build --mode PROD",
         "dev": "vite build --mode DEV --watch"
     },
+    "dependencies": {
+        "tailwind-merge": "3.3.0"
+    },
     "peerDependencies": {
         "lodash-es": ">=4.17.21",
         "react": ">=18.2.0",
-        "tailwind-merge": ">=3.3.0",
         "tailwindcss": ">=4.0.0"
     }
 }
