--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
-        "shared:build": "pnpm --filter @nild/shared build",
-        "shared:dev": "pnpm --filter @nild/shared dev",
         "components:dev": "pnpm --filter @nild/components dev",
         "components:build": "pnpm --filter @nild/components build",
         "components:test": "pnpm --filter @nild/components test",
         "hooks:dev": "pnpm --filter @nild/hooks dev",
         "hooks:build": "pnpm --filter @nild/hooks build",
+        "icons:dev": "pnpm --filter @nild/icons dev",
+        "icons:build": "pnpm --filter @nild/icons build",
+        "shared:build": "pnpm --filter @nild/shared build",
+        "shared:dev": "pnpm --filter @nild/shared dev",
         "ci:publish": "pnpm -r publish --access public --registry=https://registry.npmjs.org",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
@@ -43,9 +45,9 @@
         "@commitlint/config-conventional": "19.8.0",
         "@commitlint/types": "19.8.0",
         "@eslint/js": "9.23.0",
-        "@icon-park/react": "1.4.2",
         "@nild/components": "workspace:*",
         "@nild/hooks": "workspace:*",
+        "@nild/icons": "workspace:*",
         "@nild/shared": "workspace:*",
         "@tailwindcss/vite": "4.1.7",
         "@testing-library/jest-dom": "6.6.3",
