refactor(icons): optimize the dist structure & support on-demand import

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -9,6 +9,7 @@
             "types": "./dist/index.d.ts",
             "import": "./dist/index.js"
         },
+        "./*": "./dist/icons/*.js",
         "./css": "./dist/index.css"
     },
     "repository": {
