--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,9 +8,9 @@ on:
     branches:
       - main
     paths:
-      - ".changeset/**"
-      - "package.json"
-      - "**/package.json"
+      - '.changeset/**'
+      - 'package.json'
+      - '**/package.json'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -18,7 +18,11 @@ concurrency:
 
 jobs:
   publish:
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request_target' && github.event.pull_request.merged == true) }}
+    if: >-
+      ${{ github.event_name == 'workflow_dispatch' ||
+          (github.event_name == 'pull_request_target' &&
+           github.event.pull_request.merged == true &&
+           github.ref == 'refs/heads/main') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -38,8 +42,8 @@ jobs:
         with:
           publish: pnpm ci:publish
           version: pnpm changeset version
-          commit: "ci: publish new versions"
-          title: "ci: publish new versions"
+          commit: 'ci: publish new versions'
+          title: 'ci: publish new versions'
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
