ci: support synchronizing changelogs to docs

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: pnpm ci:publish
-          version: pnpm changeset version
+          version: pnpm ci:version
           commit: 'ci: publish new versions'
           title: 'ci: publish new versions'
         env:
