--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
-        "docs:update": "node scripts/update-docs.js",
         "components:dev": "pnpm --filter @nild/components dev",
         "components:build": "pnpm --filter @nild/components build",
         "components:test": "pnpm --filter @nild/components test",
@@ -36,7 +35,7 @@
         "icons:build": "pnpm --filter @nild/icons build",
         "shared:build": "pnpm --filter @nild/shared build",
         "shared:dev": "pnpm --filter @nild/shared dev",
-        "ci:version": "pnpm changeset version && pnpm docs:update",
+        "ci:version": "pnpm changeset version",
         "ci:publish": "pnpm -r publish --access public --registry=https://registry.npmjs.org",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
