refactor(shared): import directly from @nild/shared instead of @nild/shared/utils

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,6 +5,10 @@
     "type": "module",
     "module": "./dist/index.js",
     "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js"
+        },
         "./interfaces": {
             "types": "./dist/interfaces/index.d.ts"
         },
