refactor: use typedoc to generate and parse reflections

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -28,6 +28,7 @@
     "scripts": {
         "build": "vite build --mode PROD",
         "dev": "vite build --mode DEV --watch",
+        "api": "node scripts/generate-api.js",
         "test": "vitest run --environment jsdom --globals",
         "test:coverage": "vitest run --environment jsdom --globals --coverage"
     },
