--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "build": "pnpm -r --filter @nild/* build",
         "api": "pnpm -r --filter @nild/* api",
         "docs:dev": "vitepress dev docs",
-        "docs:build": "pnpm api && vitepress build docs",
+        "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
         "components:dev": "pnpm --filter @nild/components dev",
         "components:build": "pnpm --filter @nild/components build",
@@ -38,7 +38,7 @@
         "icons:api": "pnpm --filter @nild/icons api",
         "shared:build": "pnpm --filter @nild/shared build",
         "shared:dev": "pnpm --filter @nild/shared dev",
-        "ci:version": "pnpm changeset version",
+        "ci:version": "pnpm api && pnpm changeset version",
         "ci:publish": "pnpm -r publish --access public --registry=https://registry.npmjs.org",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
