build: refactor all doc-related text retrieval with @nild/i18n

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "icons:dev": "pnpm --filter @nild/icons dev",
         "icons:build": "pnpm --filter @nild/icons build",
         "icons:api": "pnpm --filter @nild/icons api",
+        "i18n:dev": "pnpm --filter @nild/i18n dev",
+        "i18n:build": "pnpm --filter @nild/i18n build",
         "shared:build": "pnpm --filter @nild/shared build",
         "shared:dev": "pnpm --filter @nild/shared dev",
         "ci:version": "pnpm api && pnpm changeset version",
@@ -52,6 +54,7 @@
         "@nild/components": "workspace:*",
         "@nild/hooks": "workspace:*",
         "@nild/icons": "workspace:*",
+        "@nild/i18n": "workspace:*",
         "@nild/shared": "workspace:*",
         "@tailwindcss/vite": "4.1.7",
         "@testing-library/jest-dom": "6.6.3",
