--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,15 @@
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "cSpell.words": ["commitlint", "dirents", "Morilence", "Navs", "nild", "pascalize", "snakeize", "vitepress"]
+    "cSpell.words": [
+        "commitlint",
+        "dirents",
+        "frontmatter",
+        "Morilence",
+        "Navs",
+        "nild",
+        "pascalize",
+        "snakeize",
+        "vitepress"
+    ]
 }
