feat(components): --font-nd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "cSpell.words": [
+        "avenir",
+        "blinkmacsystemfont",
         "commitlint",
         "dirents",
         "frontmatter",
