fix(docs): local search cannot index the title using frontmatter

--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
         "@eslint/js": "9.23.0",
         "@nild/components": "workspace:*",
         "@nild/hooks": "workspace:*",
-        "@nild/icons": "workspace:*",
         "@nild/i18n": "workspace:*",
+        "@nild/icons": "workspace:*",
         "@nild/shared": "workspace:*",
         "@tailwindcss/vite": "4.1.7",
         "@testing-library/jest-dom": "6.6.3",
@@ -63,6 +63,7 @@
         "@types/react": "18.2.0",
         "@types/react-dom": "18.2.0",
         "@vitejs/plugin-react": "4.4.1",
+        "cheerio": "1.1.0",
         "esbuild": "0.25.5",
         "eslint": "9.23.0",
         "eslint-config-prettier": "10.1.0",
