feat(components): Checkbox

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -38,6 +38,7 @@
     "peerDependencies": {
         "@nild/shared": "workspace:*",
         "@nild/hooks": "workspace:*",
+        "@nild/icons": "workspace:*",
         "react": ">=18.2.0",
         "react-dom": ">=18.2.0"
     }
