build: make peer dependencies stricter

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -30,6 +30,6 @@
     },
     "peerDependencies": {
         "@nild/shared": "workspace:*",
-        "react": ">=18.2.0"
+        "react": "^18.2.0"
     }
 }
