--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -39,7 +39,7 @@
         "@nild/shared": "workspace:*",
         "@nild/hooks": "workspace:*",
         "@nild/icons": "workspace:*",
-        "react": ">=18.2.0",
-        "react-dom": ">=18.2.0"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
