--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -38,6 +38,6 @@
     },
     "peerDependencies": {
         "@nild/shared": "workspace:*",
-        "react": ">=18.2.0"
+        "react": "^18.2.0"
     }
 }
