--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -38,8 +38,8 @@
         "tailwind-merge": "3.3.0"
     },
     "peerDependencies": {
-        "lodash-es": ">=4.17.21",
-        "react": ">=18.2.0",
-        "tailwindcss": ">=4.0.0"
+        "lodash-es": "^4.17.21",
+        "react": "^18.2.0",
+        "tailwindcss": "^4.1.7"
     }
 }
